message-app-consumer.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-app-consumer
  labels:
    app: message-app-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-app-consumer
  template:
    metadata:
      labels:
        app: message-app-consumer
    spec:
      containers:
      - name: message-app-consumer-container
        image: tantalor93/message-app-consumer
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/info
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: message-app-consumer
  labels:
    app: message-app-consumer
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: message-app-consumer
