ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: message-app-consumer-ingress
spec:
  backend:
    serviceName: message-app-consumer
    servicePort: 8080
